<resources>
    <string name="app_name">Weather</string>
    <string name="enter_city">Enter city:</string>
    <string name="ok">OK</string>
    <string name="hello">Hello World!</string>
    <string name="weather_today">Weather today</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="city">City</string>
    <string name="value">0</string>
    <string name="other_param">Parameters</string>
    <string name="humidity">Humidity</string>
    <string name="hide">Hide</string>
    <string name="show_history">Show history</string>
    <string name="history_is_empty">History is empty</string>
</resources>
