<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_weather_today"
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeBigText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_today"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_city"
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/temp_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
            android:id="@+id/text_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />

        <TextView
            style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
            android:id="@+id/text_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressure_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
            android:id="@+id/text_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"/>

        <TextView
            style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
            android:id="@+id/text_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
            android:id="@+id/text_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity" />

        <TextView
            style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
            android:id="@+id/text_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value" />

    </LinearLayout>

</LinearLayout>