<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <TextView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeBigText"
        android:id="@+id/text_weather_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_today"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:id="@+id/text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_weather_today"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:id="@+id/text_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_city"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:id="@+id/text_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_temperature"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:id="@+id/text_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_temperature_value"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:id="@+id/text_pressure_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pressure"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:id="@+id/text_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pressure_value" />

    <TextView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:id="@+id/text_humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_humidity" />

    <ImageView
        style="@style/Theme.AppCompat.Light.DarkActionBar.MyAppThemeMediumText"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/text_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_weather_today"
        app:srcCompat="@drawable/sun_and_rain" />

</android.support.constraint.ConstraintLayout>